--- a/PointofSale/PointofSale.csproj
+++ b/PointofSale/PointofSale.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Checks.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Checks.txt" />
+  </ItemGroup>
+
 </Project>
